infrastructure/prometheus-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: prometheus-server
  name: prometheus-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: prometheus-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: prometheus-server
    spec:
      containers:
        - image: registry.gitlab.com/openclassrooms-devops/spring-petclinic-microservices/prometheus:2.3.2
          name: prometheus-server
          ports:
            - containerPort: 9090
          resources:
            limits:
              memory: "268435456"
      restartPolicy: Always
status: {}
