infrastructure/tracing-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: tracing-server
  name: tracing-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tracing-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: tracing-server
    spec:
      containers:
        - env:
            - name: JAVA_OPTS
              value: -XX:+UnlockExperimentalVMOptions -Djava.security.egd=file:/dev/./urandom
          image: openzipkin/zipkin
          name: tracing-server
          ports:
            - containerPort: 9411
          resources:
            limits:
              memory: "536870912"
      restartPolicy: Always
status: {}
