infrastructure/prometheus-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: prometheus-server
  name: prometheus-server
spec:
  ports:
    - name: "9091"
      port: 9091
      targetPort: 9090
  selector:
    io.kompose.service: prometheus-server
status:
  loadBalancer: {}
